--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-	"name": "lua-formatter",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json"
-	},
-	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@tsconfig/svelte": "^5.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.2.0",
-		"@typescript-eslint/parser": "^7.2.0",
-		"eslint": "^8.57.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.2",
-		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.6",
-		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^5.1.6"
-	},
-	"dependencies": {
-		"autoprefixer": "^10.4.18",
-		"lua-format": "^1.4.1",
-		"postcss": "^8.4.35",
-		"tailwindcss": "^3.4.1"
-	}
+  "name": "lua-formatter",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tsconfig/svelte": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
+    "svelte": "^4.2.12",
+    "svelte-check": "^3.6.6",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.6"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.18",
+    "localforage": "^1.10.0",
+    "lua-format": "^1.4.1",
+    "luamin": "^1.0.4",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
+  }
 }
